# Cabinet

.github/workflows/: release.yml
cabinet/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  docker-compose.yml  pyproject.toml
cabinet-gui/: README.md  app.py  requirements.txt  启动.bat  启动.ps1
cabinet-gui/pages/: console.py  encoder_viz.py  home.py  index_browser.py  memory_arch.py  search_path.py
cabinet/.github/workflows/: ci.yml  publish.yml
cabinet/bench/: Cargo.toml  basic.rs
cabinet/bench/src/: main.rs
cabinet/crates/cabinet-cli/: Cargo.toml
cabinet/crates/cabinet-cli/src/: main.rs
cabinet/crates/cabinet-core/: Cargo.toml
cabinet/crates/cabinet-core/examples/: basic.rs
cabinet/crates/cabinet-core/src/: lib.rs
cabinet/crates/cabinet-core/tests/: integration_tests.rs
cabinet/crates/cabinet-gui/: Cargo.toml
cabinet/crates/cabinet-gui/src/: main.rs
cabinet/crates/cabinet-hsh/: Cargo.toml
cabinet/crates/cabinet-hsh/examples/: basic.rs
cabinet/crates/cabinet-hsh/src/: cluster.rs  encoder.rs  error.rs  hsh_code.rs  lib.rs  perfect_hash.rs  pos_map.rs
cabinet/crates/cabinet-hsh/tests/: integration_tests.rs
cabinet/crates/cabinet-index/: Cargo.toml
cabinet/crates/cabinet-index/src/: archive_index.rs  compress.rs  lib.rs  posting.rs  token_store.rs  working_memory.rs
cabinet/crates/cabinet-index/tests/: integration_tests.rs
cabinet/crates/cabinet-router/: Cargo.toml
cabinet/crates/cabinet-router/src/: lib.rs
cabinet/crates/cabinet-router/tests/: integration_tests.rs
cabinet/crates/cabinet-store/: Cargo.toml
cabinet/crates/cabinet-store/src/: lib.rs  sqlite.rs
cabinet/crates/cabinet-tools/: Cargo.toml
cabinet/crates/cabinet-tools/src/: main.rs
cabinet/examples/: basic.py  basic.rs  sample_corpus.txt
cabinet/examples/gui/: __init__.py  main.py  utils.py
cabinet/examples/gui/pages/: __init__.py  console.py  encoder_viz.py  home.py  index_browser.py  memory_arch.py  search_path.py
cabinet/paper/: cabinet_paper.tex
cabinet/pycabinet/: Cargo.toml  MANIFEST.in  README.md  RELEASE.md  pyproject.toml
cabinet/pycabinet/python/pycabinet/: __init__.py  context_decoder.py  document_parser.py  plot.py
cabinet/pycabinet/src/: lib.rs
cabinet/pycabinet/tests/: test_basic.py
cabinet/scripts/: build-release.bat  build-release.sh  test-install.py
