[workspace]
members = [
    "crates/cabinet-hsh",
    "crates/cabinet-index",
    "crates/cabinet-store",
    "crates/cabinet-router",
    "crates/cabinet-core",
    "crates/cabinet-cli",
    "crates/cabinet-tools",
    "pycabinet",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cabinet Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourname/cabinet"
rust-version = "1.72"

[workspace.dependencies]
# 内部依赖
cabinet-hsh = { path = "crates/cabinet-hsh" }
cabinet-index = { path = "crates/cabinet-index" }
cabinet-store = { path = "crates/cabinet-store" }
cabinet-router = { path = "crates/cabinet-router" }
cabinet-core = { path = "crates/cabinet-core" }

# 外部依赖
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rayon = "1.8"
parking_lot = "0.12"
crossbeam = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1
