[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycabinet"
version = "0.1.0"
description = "Python bindings for Cabinet - Hierarchical Semantic Hashing memory retrieval"
readme = "pycabinet/README.md"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.8"
keywords = ["memory", "retrieval", "semantic", "hashing", "RAG", "AI-agent"]
authors = [
    { name = "Cabinet Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]
gui = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "plotly>=5.18",
    "graphviz>=0.20",
    "pillow>=10.0",
    "numpy>=1.24",
]
dev = [
    "maturin>=1.0",
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourname/cabinet"
Documentation = "https://github.com/yourname/cabinet#readme"
Repository = "https://github.com/yourname/cabinet"
Issues = "https://github.com/yourname/cabinet/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "pycabinet._pycabinet"
manifest-path = "pycabinet/Cargo.toml"
python-source = "pycabinet/python"
# 打包源码分发版时包含整个 Rust workspace
include = [
    { path = "Cargo.toml", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    { path = "crates", format = "sdist" },
]
