[package]
name = "pycabinet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PyO3 Python 绑定"

[lib]
name = "pycabinet"
crate-type = ["cdylib"]

[dependencies]
cabinet-core = { workspace = true }
cabinet-hsh = { workspace = true }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }

[dependencies.anyhow]
workspace = true
