[package]
name = "cabinet-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cabinet 命令行工具"

[[bin]]
name = "cabinet"
path = "src/main.rs"

[dependencies]
cabinet-core = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
colored = "2.1"
indicatif = "0.17"
