[package]
name = "cabinet-hsh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HSH 编码核心：20-bit 层次语义哈希"

[dependencies]
jieba-rs = "0.6"
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
ahash = "0.8"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]
