[package]
name = "cabinet-store"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "存储层：SQLite/RocksDB 后端适配"

[dependencies]
cabinet-hsh = { workspace = true }
cabinet-index = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
rusqlite = { version = "0.30", features = ["bundled", "blob"] }
crc32fast = "1.3"

[dev-dependencies]
tempfile = "3.10"
